add album-info modal

--- a/album-art-showcase/index.html
+++ b/album-art-showcase/index.html
@@ -39,20 +39,28 @@
       <button data-target="modal-form" class="btn modal-trigger">Add Tracks</button>
     </nav>
     <div class="grid">
-      <div data-target="modal-form" class="album modal-trigger">
+      <div data-target="album-info" class="album modal-trigger">
         <img src="img/profile-img.jpg" alt="">
         <h3>I am a Skeleton</h3>
       </div>
-      <div data-target="modal-form" class="album modal-trigger">
+      <div data-target="album-info" class="album modal-trigger">
         <img src="img/profile-img.jpg" alt="">
         <h3>Also a Skeleton</h3>
       </div>
-      <div data-target="modal-form" class="album modal-trigger">
+      <div data-target="album-info" class="album modal-trigger">
         <img src="img/profile-img.jpg" alt="">
         <h3>Still a Skeleton</h3>
       </div>
     </div>
   </div>
+
+  <div id="album-info" class="modal album-info">
+    <img src="img/profile-img.jpg" alt="">
+    <h2>ALBUM NAME HERE</h2>
+    <h5>Artist Name</h5>
+    <h5>Date Released</h5>
+  </div>
+
     <!-- Modal Structure -->
     <div id="modal-form" class="modal bottom-sheet">
       <div class="modal-content">
